microservices/k8s/result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result-service
  template:
    metadata:
      labels:
        app: result-service
    spec:
      containers:
      - name: result-service
        image: result-service:latest
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 500m
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: result-service
spec:
  selector:
    app: result-service
  ports:
  - port: 3000
    targetPort: 3000
