microservices/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sms-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3000
      - path: /api/v1/students
        pathType: Prefix
        backend:
          service:
            name: student-service
            port:
              number: 3000
      - path: /api/v1/results
        pathType: Prefix
        backend:
          service:
            name: result-service
            port:
              number: 3000
